# otlp2pipeline

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile.azure  README.md  build.rs  openapi.yaml  schema.json  wrangler.toml  wrangler.toml.example
.claude/: hookify.no-multiline-commits.local.md  hookify.protect-generated-schemas.local.md  hookify.warn-wrangler-secrets.local.md
.github/workflows/: azure.yml  ci.yml  release.yml
docs/: agents.md  aws-s3tables-firehose-setup.md  azure-poc-README.md  azure-poc-guide.md  plan-aws-cli-migration.md  plan-otlp2records.md
docs/plans/: 2026-01-14-azure-support-design.md
examples/: azure-stream-analytics.bicep  azure_eventhub_poc.rs  stream-analytics-query.sql
frontend/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts  wrangler.toml
frontend/src/: App.tsx  index.css
frontend/src/components/: CatalogOverview.stories.tsx  CatalogOverview.tsx  ConnectionForm.stories.tsx  ConnectionForm.tsx  ErrorAlert.tsx  ErrorBoundary.tsx  HoneycombGrid.stories.tsx  HoneycombGrid.tsx  JsonTree.tsx  Layout.stories.tsx  Layout.tsx  LoadingState.stories.tsx  LoadingState.tsx  LogDetailPanel.stories.tsx  LogDetailPanel.tsx  OverviewBar.stories.tsx  OverviewBar.tsx  QueryInput.stories.tsx  QueryInput.tsx  RecordsPanel.tsx  RedChart.tsx  ServiceCard.tsx  ServiceCell.tsx  ServiceHealthCards.stories.tsx  ServiceHealthCards.tsx  SetupModal.tsx  SpanDetailsPanel.stories.tsx  SpanDetailsPanel.tsx  TabBar.stories.tsx  TabBar.tsx  TailInput.stories.tsx  TailInput.tsx  TimeRangePicker.stories.tsx  TimeRangePicker.tsx  Toast.stories.tsx  Toast.tsx  ViewToggle.stories.tsx  ViewToggle.tsx
frontend/src/hooks/: useCatalogStats.ts  useCredentials.ts  useDuckDB.ts  useLiveTail.ts  usePerspectiveConfig.ts  useServiceStats.ts  useServices.ts  useStats.ts
frontend/src/lib/: PerspectiveDatagrid.stories.tsx  api.ts  duckdb.ts  fetchWithTimeout.ts  format.ts  iceberg.ts  parseCommand.ts  perspective.ts  perspectivePresets.ts  storage.ts
frontend/src/lib/perspective-waterfall/: Waterfall.stories.tsx  arrow.ts  colors.ts  index.ts  layout.ts  plugin.ts  renderer.ts  types.ts
frontend/src/pages/: Home.tsx  QueryExplorer.tsx  RecordsExplorer.tsx  ServiceDetail.tsx  ServiceList.tsx  Settings.tsx
frontend/src/stories/: PerspectiveWrapper.tsx  mocks.ts  perspectiveMocks.ts
schemas/: exp_histogram.schema.json  gauge.schema.json  histogram.schema.json  logs.schema.json  spans.schema.json  sum.schema.json
scripts/: aws-deploy.sh  aws-grant-firehose-permissions.sh  aws-s3tables-setup.sh  aws-send-test-record.sh  check-size.sh  check_file_length.py  deploy-stream-analytics.sh  pipeline-env.sh
src/: convert.rs  lib.rs  native.rs  schema.rs  signal.rs  stats.rs  wasm.rs
src/aggregator/: durable_object.rs  mod.rs  sender.rs  stats.rs
src/azure/: eventhub.rs  mod.rs
src/cache/: arrow_convert.rs  durable_object.rs  insert_helpers.rs  mod.rs  types.rs
src/cache/parquet/: convert.rs  export.rs  mod.rs  params.rs
src/cache/telemetry/: do_query.rs  mod.rs  sender.rs
src/cli/: auth.rs  config.rs  mod.rs  url.rs
src/cli/commands/: bucket.rs  catalog.rs  connect.rs  create.rs  destroy.rs  init.rs  mod.rs  naming.rs  plan.rs  query.rs  services.rs  status.rs  tail.rs
src/cli/commands/aws/: catalog.rs  context.rs  create.rs  deploy.rs  destroy.rs  helpers.rs  mod.rs  plan.rs  query.rs  schema.rs  status.rs
src/cli/commands/aws/cli/: athena.rs  cloudformation.rs  firehose.rs  glue.rs  iam.rs  lakeformation.rs  lambda.rs  mod.rs  s3.rs  s3tables.rs  sts.rs
src/cli/commands/azure/: context.rs  create.rs  deploy.rs  destroy.rs  helpers.rs  mod.rs  plan.rs  status.rs
src/cli/commands/azure/cli/: az.rs  containerapp.rs  eventhub.rs  functionapp.rs  mod.rs  resource.rs  storage.rs  stream_analytics.rs
src/cli/commands/cloudflare/: bucket.rs  catalog.rs  create.rs  destroy.rs  mod.rs  plan.rs  query.rs  status.rs
src/cloudflare/: access.rs  client.rs  iceberg.rs  iceberg_types.rs  mod.rs  pipelines.rs  r2.rs  workers.rs
src/decode/: mod.rs
src/decode/hec/: logs.rs  mod.rs
src/decode/otlp/: common.rs  logs.rs  logs_json.rs  logs_proto.rs  metrics.rs  metrics_json.rs  metrics_proto.rs  mod.rs  traces.rs  traces_json.rs  traces_proto.rs
src/decode/record_builder/: log_builder.rs  metric_builder.rs  mod.rs  span_builder.rs
src/handler/: mod.rs  signal_handlers.rs
src/lambda/: firehose.rs  mod.rs
src/livetail/: cache.rs  durable_object.rs  mod.rs  sender.rs
src/pipeline/: client.rs  mod.rs  retry.rs  sender.rs
src/registry/: cache.rs  durable_object.rs  mod.rs  sender.rs
src/transform/: functions.rs  mod.rs  runtime.rs
src/transform/functions/: core.rs  helpers.rs  mod.rs
templates/aws/: logs.cfn.yaml  otlp.cfn.yaml
templates/azure/: otlp.bicep
templates/azure/function/: host.json
templates/azure/function/otlp/: function.json
tests/: azure_function_integration.rs  cli_init_test.rs  e2e_hec_logs.rs  e2e_hot_cache.rs  e2e_logs.rs  e2e_metrics.rs  e2e_query_security.rs  e2e_traces.rs  firehose_retry.rs  lambda_integration.rs
tests/fixtures/: metrics_gauge.pb  metrics_mixed.pb  metrics_sum.pb  sample_hec.json  sample_otlp.json  sample_otlp_metrics.json  sample_otlp_traces.json
tests/helpers/: mod.rs
vrl/: hec_logs.vrl  otlp_gauge.vrl  otlp_logs.vrl  otlp_sum.vrl  otlp_traces.vrl
